# Sovra

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md  guardianClient.ts  package.json  run-local-tests.sh  tsconfig.json
.github/workflows/: ci.yml
contracts/hello_world/: Cargo.toml
contracts/hello_world/src/: lib.rs
mobile-app/: .env.example  App.tsx  MOBILE_README.md  app.json  metro.config.js  package.json
mobile-app/qvac/: addons.manifest.json
mobile-app/scripts/: check-android-sdk.js
mobile-app/src/components/: Button.tsx  Card.tsx  DecisionBadge.tsx  LoadingOverlay.tsx  SafeAreaWrapper.tsx  ScoreBar.tsx  index.ts
mobile-app/src/mocks/: analysisData.ts
mobile-app/src/navigation/: AppNavigator.tsx
mobile-app/src/screens/: AnalysisScreen.tsx  DelayScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  OCRScanScreen.tsx  PartialApprovalScreen.tsx  (+4 more)
programs/guardian_executor/: Cargo.toml
programs/guardian_executor/src/: lib.rs
qvac-decision-engine/: ARCHITECTURE.md  CHECKLIST.md  COMPLETION-REPORT.md  INDEX.md  MANIFEST.md  NAVIGATION.md  QA-TESTING-GUIDE.md  QUICKSTART-VALIDATION.md  QUICKSTART.md  README.md  SUMMARY.md  TEST-SUITE.md  VALIDATION-FRAMEWORK.md  contextAwarnessTester.js  contractValidator.js  decisionEngine.js  enforcementTester.js  examples.js  logicalValidator.js  metricsCollector.js  package.json  reportGenerator.js  setup.sh  test-report.json  testRunner.js  testScenarios.js  validation-report.json  validation-report.md  validationRunner.js
tests/: devnet-integration.ts  guardian_executor.ts
(+23 files in other folders)
