[package]
name = "guardian_executor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }


[build-dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }

[features]
idl-build = ["anchor-lang/idl-build"]
